Compucom CCQA/src/objects/Actual_Model__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FCST Actual Models</relationshipLabel>
        <relationshipName>Actual_Models</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Actual_Amount__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Type__c</fullName>
        <label>Actual Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Baseline</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BSLA__c</fullName>
        <label>BSLA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Description__c</fullName>
        <label>CC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC_unused</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDR_Description__c</fullName>
        <label>CDR Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDR__c</fullName>
        <label>CDR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_LineItem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contract LineItem</label>
        <referenceTo>Contract_LineItem__c</referenceTo>
        <relationshipLabel>FCST Actual Models</relationshipLabel>
        <relationshipName>FCST_Actual_Models</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_OwnerId__c</fullName>
        <formula>FCST_Contract__r.Contract_Owner__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>COwnerUnused Field</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_CC__c</fullName>
        <label>FCST CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FCST Contract</label>
        <referenceTo>FCST_Contract__c</referenceTo>
        <relationshipLabel>FCST Actual Models</relationshipLabel>
        <relationshipName>FCST_Actual_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCST_GEO__c</fullName>
        <label>FCST GEO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_Planning_Version__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>FCST Planning Version</label>
        <referenceTo>Planning_Version__c</referenceTo>
        <relationshipLabel>FCST Actual Models</relationshipLabel>
        <relationshipName>Actual_Models</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fiscal Period</label>
        <referenceTo>Fiscal_Year_Model__c</referenceTo>
        <relationshipLabel>FCST Actual Models</relationshipLabel>
        <relationshipName>Actual_Models</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>Fiscal_Year_Planning__c</referenceTo>
        <relationshipLabel>FCST Actual Models</relationshipLabel>
        <relationshipName>FCST_Actual_Models</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GEO_Description__c</fullName>
        <label>GEO Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEO__c</fullName>
        <label>GEO_unused</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model_Name__c</fullName>
        <formula>LEFT( Account__c ,15) &amp; &apos;#&apos; &amp; LEFT(Fiscal_Period__c,15) &amp; &apos;#&apos; &amp; LEFT( FCST_Planning_Version__c ,15)  &amp; &apos;#&apos; &amp; LEFT( Contract_LineItem__c ,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>FCST Actual Models</relationshipLabel>
        <relationshipName>FCST_Actual_Models_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Offering Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>FCST Actual Models</relationshipLabel>
        <relationshipName>Actual_Models</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Stream__c</fullName>
        <label>Revenue Stream</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesKey__c</fullName>
        <formula>Account__c &amp; &apos;#&apos; &amp; FCST_Planning_Version__c &amp; &apos;#&apos; &amp; Fiscal_Period__r.Fiscal_Year__c &amp; &apos;-&apos; &amp; 
Fiscal_Period__r.Fiscal_Quarter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SalesKey Unused Field</label>
        <type>Text</type>
    </fields>
    <label>FCST Actual Model</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Fiscal_Period__c</columns>
        <columns>Revenue_Type__c</columns>
        <columns>Actual_Amount__c</columns>
        <columns>Revenue_Stream__c</columns>
        <columns>BSLA__c</columns>
        <columns>CC__c</columns>
        <columns>CC_Description__c</columns>
        <columns>Contract_LineItem__c</columns>
        <columns>FCST_GEO__c</columns>
        <columns>FCST_Planning_Version__c</columns>
        <columns>Fiscal_Year__c</columns>
        <columns>GEO__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Actual-{00000}</displayFormat>
        <label>Actual Model Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FCST Actual Models</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>